[package]
name = "rust_blockchain_ml"
version = "0.1.0"
authors = ["pavelkrolevets <pavelkrolevets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0.114"
libp2p = "0.22.0"
termion = "1.5.5"
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.6"
diesel = { version = "1.3.3", features = ["mysql"] }
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
jwt = "0.4.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
rust-argon2 = "0.8.2"
secstr = "0.4.0"